--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "@astrojs/tailwind": "^5.0.1",
     "astro": "^3.2.3",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.4",
+    "prettier-plugin-astro": "^0.8.0"
   }
 }
